--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,22 @@
   }
 }
 
+.fade-in {
+  animation: fadeIn 0.2s ease-in-out forwards, scaleIn 0.2s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 h2 {
   @apply font-semibold !tracking-normal text-2xl lg:text-32
 }
