--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -627,6 +627,9 @@ body{
   top: 0px;
   bottom: 0px;
 }
+.-top-12{
+  top: -3rem;
+}
 .-top-9{
   top: -2.25rem;
 }
@@ -685,6 +688,12 @@ body{
 }
 .\!mt-4{
   margin-top: 1rem !important;
+}
+.-mr-2{
+  margin-right: -0.5rem;
+}
+.-mt-5{
+  margin-top: -1.25rem;
 }
 .mb-0\.5{
   margin-bottom: 0.125rem;
@@ -927,6 +936,9 @@ body{
 .h-60{
   height: 15rem;
 }
+.h-72{
+  height: 18rem;
+}
 .h-8{
   height: 2rem;
 }
@@ -1037,9 +1049,6 @@ body{
 .max-w-96{
   max-width: 24rem;
 }
-.max-w-\[15\.9375rem\]{
-  max-width: 15.9375rem;
-}
 .max-w-\[16\.25rem\]{
   max-width: 16.25rem;
 }
@@ -1113,6 +1122,10 @@ body{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.rotate-0{
+  --tw-rotate: 0deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .rotate-180{
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1127,6 +1140,9 @@ body{
   -webkit-user-select: all;
      -moz-user-select: all;
           user-select: all;
+}
+.resize{
+  resize: both;
 }
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1232,9 +1248,6 @@ body{
 }
 .gap-y-5{
   row-gap: 1.25rem;
-}
-.gap-y-6{
-  row-gap: 1.5rem;
 }
 .gap-y-8{
   row-gap: 2rem;
@@ -1406,10 +1419,6 @@ body{
 .bg-brand-dark{
   --tw-bg-opacity: 1;
   background-color: rgb(84 84 84 / var(--tw-bg-opacity));
-}
-.bg-brand-green-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 247 231 / var(--tw-bg-opacity));
 }
 .bg-brand-green-200{
   --tw-bg-opacity: 1;
@@ -1616,6 +1625,10 @@ body{
   font-size: 2rem;
   line-height: 2.5rem;
 }
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
 .text-5xl\/6{
   font-size: 3rem;
   line-height: 1.5rem;
@@ -1804,6 +1817,9 @@ body{
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1824,22 +1840,6 @@ body{
 }
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.fade-in {
-  animation: fadeIn 0.2s ease-in-out forwards, scaleIn 0.2s ease-in-out forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: scale(0.95);
-  }
-
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
 }
 
 h2{
@@ -1951,6 +1951,59 @@ h3{
 .tab-noactive:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(229 247 231 / var(--tw-bg-opacity));
+}
+
+.filter-content{
+  position: absolute;
+  top: 0px;
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+@media (min-width: 1024px){
+
+
+  .filter-content{
+    position: static;
+  }
+}
+
+
+.fade-left {
+  animation: fadeLeft 0.3s ease-in-out forwards;
+}
+
+@keyframes fadeLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.2s ease-in-out forwards, scaleIn 0.2s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 
@@ -2512,6 +2565,16 @@ h3{
 @media (min-width: 768px){
 
 
+  .md\:-right-5{
+    right: -1.25rem;
+  }
+
+
+  .md\:-top-3{
+    top: -0.75rem;
+  }
+
+
   .md\:-mx-7{
     margin-left: -1.75rem;
     margin-right: -1.75rem;
@@ -2880,6 +2943,16 @@ h3{
 @media (min-width: 1024px){
 
 
+  .lg\:static{
+    position: static;
+  }
+
+
+  .lg\:-right-8{
+    right: -2rem;
+  }
+
+
   .lg\:order-none{
     order: 0;
   }
@@ -2893,6 +2966,11 @@ h3{
 
   .lg\:\!mt-20{
     margin-top: 5rem !important;
+  }
+
+
+  .lg\:mt-0{
+    margin-top: 0px;
   }
 
 
@@ -3073,6 +3151,11 @@ h3{
   }
 
 
+  .lg\:max-w-\[15\.9375rem\]{
+    max-width: 15.9375rem;
+  }
+
+
   .lg\:max-w-\[21\.875rem\]{
     max-width: 21.875rem;
   }
@@ -3217,8 +3300,18 @@ h3{
   }
 
 
+  .lg\:rounded-md{
+    border-radius: 0.375rem;
+  }
+
+
   .lg\:border-t{
     border-top-width: 1px;
+  }
+
+
+  .lg\:bg-transparent{
+    background-color: transparent;
   }
 
 
@@ -3392,6 +3485,18 @@ h3{
   }
 
 
+  .lg\:text-4xl\/6{
+    font-size: 2.25rem;
+    line-height: 1.5rem;
+  }
+
+
+  .lg\:text-5xl\/6{
+    font-size: 3rem;
+    line-height: 1.5rem;
+  }
+
+
   .lg\:text-\[1\.375rem\]\/\[1\]{
     font-size: 1.375rem;
     line-height: 1;
@@ -3485,11 +3590,6 @@ h3{
   .xl\:gap-16{
     gap: 4rem;
   }
-
-
-  .xl\:pt-20{
-    padding-top: 5rem;
-  }
 }
 @media (prefers-color-scheme: dark){
 
@@ -3497,11 +3597,5 @@ h3{
   .dark\:text-gray-400{
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
-  }
-
-
-  .dark\:text-white{
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
