--- a/src/styles.css
+++ b/src/styles.css
@@ -18,22 +18,6 @@
   }
 }
 
-.fade-in {
-  animation: fadeIn 0.2s ease-in-out forwards, scaleIn 0.2s ease-in-out forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: scale(0.95);
-  }
-
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
 h2 {
   @apply font-semibold !tracking-normal text-2xl lg:text-32
 }
@@ -61,6 +45,43 @@ h3 {
 
 .tab-noactive {
   @apply block w-full text-left transition duration-200 hover:bg-brand-green-100 py-2 px-4;
+}
+
+.filter-content {
+  @apply absolute lg:static -translate-x-full top-0 transition duration-300;
+}
+
+
+.fade-left {
+  animation: fadeLeft 0.3s ease-in-out forwards;
+}
+
+@keyframes fadeLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.2s ease-in-out forwards, scaleIn 0.2s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 
