--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -620,9 +620,6 @@ body{
 .relative{
   position: relative;
 }
-.sticky{
-  position: sticky;
-}
 .inset-0{
   inset: 0px;
 }
@@ -695,6 +692,9 @@ body{
 .-mr-2{
   margin-right: -0.5rem;
 }
+.-mr-4{
+  margin-right: -1rem;
+}
 .mb-0\.5{
   margin-bottom: 0.125rem;
 }
@@ -706,6 +706,9 @@ body{
 }
 .mb-2\.5{
   margin-bottom: 0.625rem;
+}
+.mb-5{
+  margin-bottom: 1.25rem;
 }
 .mb-6{
   margin-bottom: 1.5rem;
@@ -776,11 +779,8 @@ body{
 .mt-8{
   margin-top: 2rem;
 }
-.mr-2{
-  margin-right: 0.5rem;
-}
-.-mr-4{
-  margin-right: -1rem;
+.mb-4{
+  margin-bottom: 1rem;
 }
 .line-clamp-1{
   overflow: hidden;
@@ -979,21 +979,11 @@ body{
   height: -moz-max-content;
   height: max-content;
 }
-.max-h-\[32rem\]{
-  max-height: 32rem;
-}
-.max-h-max{
-  max-height: -moz-max-content;
-  max-height: max-content;
-}
-.max-h-\[30rem\]{
-  max-height: 30rem;
-}
-.max-h-\[35rem\]{
-  max-height: 35rem;
-}
 .max-h-\[28\.125rem\]{
   max-height: 28.125rem;
+}
+.max-h-\[32rem\]{
+  max-height: 32rem;
 }
 .min-h-full{
   min-height: 100%;
@@ -2390,6 +2380,11 @@ h3{
   }
 
 
+  .xs\:-mr-2{
+    margin-right: -0.5rem;
+  }
+
+
   .xs\:mt-0{
     margin-top: 0px;
   }
@@ -2402,11 +2397,6 @@ h3{
 
   .xs\:mt-40{
     margin-top: 10rem;
-  }
-
-
-  .xs\:-mr-2{
-    margin-right: -0.5rem;
   }
 
 
@@ -2490,11 +2480,6 @@ h3{
   .xs\:py-3{
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-  }
-
-
-  .xs\:pr-4{
-    padding-right: 1rem;
   }
 
 
