--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -985,6 +985,9 @@ body{
 .max-h-\[32rem\]{
   max-height: 32rem;
 }
+.max-h-\[30\.8125rem\]{
+  max-height: 30.8125rem;
+}
 .min-h-full{
   min-height: 100%;
 }
