--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -639,6 +639,9 @@ body{
 .left-0{
   left: 0px;
 }
+.left-1\/2{
+  left: 50%;
+}
 .left-4{
   left: 1rem;
 }
@@ -659,6 +662,9 @@ body{
 }
 .top-1\/2{
   top: 50%;
+}
+.top-3{
+  top: 0.75rem;
 }
 .z-0{
   z-index: 0;
@@ -707,8 +713,8 @@ body{
 .mb-2\.5{
   margin-bottom: 0.625rem;
 }
-.mb-5{
-  margin-bottom: 1.25rem;
+.mb-4{
+  margin-bottom: 1rem;
 }
 .mb-6{
   margin-bottom: 1.5rem;
@@ -721,9 +727,6 @@ body{
 }
 .ml-4{
   margin-left: 1rem;
-}
-.ml-8{
-  margin-left: 2rem;
 }
 .ml-9{
   margin-left: 2.25rem;
@@ -742,6 +745,9 @@ body{
 }
 .mt-10{
   margin-top: 2.5rem;
+}
+.mt-14{
+  margin-top: 3.5rem;
 }
 .mt-15{
   margin-top: 0.9375rem;
@@ -778,9 +784,6 @@ body{
 }
 .mt-8{
   margin-top: 2rem;
-}
-.mb-4{
-  margin-bottom: 1rem;
 }
 .line-clamp-1{
   overflow: hidden;
@@ -873,6 +876,10 @@ body{
   width: 0.75rem;
   height: 0.75rem;
 }
+.size-30{
+  width: 1.875rem;
+  height: 1.875rem;
+}
 .size-32{
   width: 8rem;
   height: 8rem;
@@ -908,10 +915,6 @@ body{
 .size-full{
   width: 100%;
   height: 100%;
-}
-.size-30{
-  width: 1.875rem;
-  height: 1.875rem;
 }
 .h-10{
   height: 2.5rem;
@@ -976,6 +979,9 @@ body{
 .h-\[7\.5625rem\]{
   height: 7.5625rem;
 }
+.h-\[calc\(100vh-200px\)\]{
+  height: calc(100vh - 200px);
+}
 .h-full{
   height: 100%;
 }
@@ -983,14 +989,11 @@ body{
   height: -moz-max-content;
   height: max-content;
 }
-.max-h-\[28\.125rem\]{
-  max-height: 28.125rem;
-}
 .max-h-\[32rem\]{
   max-height: 32rem;
 }
-.max-h-\[30\.8125rem\]{
-  max-height: 30.8125rem;
+.max-h-screen{
+  max-height: 100vh;
 }
 .min-h-full{
   min-height: 100%;
@@ -1074,6 +1077,9 @@ body{
 .max-w-96{
   max-width: 24rem;
 }
+.max-w-\[15\.25rem\]{
+  max-width: 15.25rem;
+}
 .max-w-\[16\.25rem\]{
   max-width: 16.25rem;
 }
@@ -1142,6 +1148,10 @@ body{
 }
 .shrink-0{
   flex-shrink: 0;
+}
+.-translate-x-1\/2{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
@@ -1457,21 +1467,13 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(235 87 87 / var(--tw-bg-opacity));
 }
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-brand-green-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 247 231 / var(--tw-bg-opacity));
-}
-.bg-green-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
 .bg-green-500{
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .object-cover{
   -o-object-fit: cover;
@@ -1740,14 +1742,8 @@ body{
 .font-thin{
   font-weight: 100;
 }
-.font-extralight{
-  font-weight: 200;
-}
 .leading-6{
   line-height: 1.5rem;
-}
-.leading-none{
-  line-height: 1;
 }
 .leading-\[0\]{
   line-height: 0;
@@ -2428,11 +2424,6 @@ h3{
   }
 
 
-  .xs\:mt-5{
-    margin-top: 1.25rem;
-  }
-
-
   .xs\:flex{
     display: flex;
   }
@@ -2508,11 +2499,6 @@ h3{
   .xs\:py-3{
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-  }
-
-
-  .xs\:pr-3{
-    padding-right: 0.75rem;
   }
 }
 @media (min-width: 640px){
@@ -2633,6 +2619,11 @@ h3{
 @media (min-width: 768px){
 
 
+  .md\:relative{
+    position: relative;
+  }
+
+
   .md\:-right-5{
     right: -1.25rem;
   }
@@ -2665,6 +2656,11 @@ h3{
   }
 
 
+  .md\:mt-11{
+    margin-top: 2.75rem;
+  }
+
+
   .md\:mt-20{
     margin-top: 5rem;
   }
@@ -2692,6 +2688,11 @@ h3{
 
   .md\:flex{
     display: flex;
+  }
+
+
+  .md\:grid{
+    display: grid;
   }
 
 
@@ -2739,8 +2740,19 @@ h3{
   }
 
 
+  .md\:h-\[2\.8125rem\]{
+    height: 2.8125rem;
+  }
+
+
   .md\:h-\[31\.5625rem\]{
     height: 31.5625rem;
+  }
+
+
+  .md\:min-h-max{
+    min-height: -moz-max-content;
+    min-height: max-content;
   }
 
 
@@ -2786,6 +2798,11 @@ h3{
 
   .md\:max-w-\[20\.4375rem\]{
     max-width: 20.4375rem;
+  }
+
+
+  .md\:max-w-\[35\.25rem\]{
+    max-width: 35.25rem;
   }
 
 
@@ -2870,6 +2887,12 @@ h3{
   }
 
 
+  .md\:bg-white{
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+
   .md\:p-5{
     padding: 1.25rem;
   }
@@ -2877,6 +2900,12 @@ h3{
 
   .md\:p-6{
     padding: 1.5rem;
+  }
+
+
+  .md\:px-3{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
   }
 
 
@@ -2916,6 +2945,12 @@ h3{
   }
 
 
+  .md\:py-1{
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+
   .md\:py-10{
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
@@ -2946,11 +2981,6 @@ h3{
   }
 
 
-  .md\:\!pt-12{
-    padding-top: 3rem !important;
-  }
-
-
   .md\:pb-6{
     padding-bottom: 1.5rem;
   }
@@ -2968,6 +2998,16 @@ h3{
 
   .md\:pl-7{
     padding-left: 1.75rem;
+  }
+
+
+  .md\:pr-0{
+    padding-right: 0px;
+  }
+
+
+  .md\:pr-3{
+    padding-right: 0.75rem;
   }
 
 
@@ -3227,6 +3267,11 @@ h3{
 
   .lg\:max-w-64{
     max-width: 16rem;
+  }
+
+
+  .lg\:max-w-\[14\.9375rem\]{
+    max-width: 14.9375rem;
   }
 
 
