--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -992,9 +992,6 @@ body{
 .max-h-\[32rem\]{
   max-height: 32rem;
 }
-.max-h-screen{
-  max-height: 100vh;
-}
 .min-h-full{
   min-height: 100%;
 }
@@ -2750,12 +2747,6 @@ h3{
   }
 
 
-  .md\:min-h-max{
-    min-height: -moz-max-content;
-    min-height: max-content;
-  }
-
-
   .md\:w-1\/2{
     width: 50%;
   }
@@ -3236,6 +3227,16 @@ h3{
   .lg\:h-max{
     height: -moz-max-content;
     height: max-content;
+  }
+
+
+  .lg\:h-\[calc\(100vh-400px\)\]{
+    height: calc(100vh - 400px);
+  }
+
+
+  .lg\:h-\[calc\(100vh-450px\)\]{
+    height: calc(100vh - 450px);
   }
 
 
