--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -666,6 +666,12 @@ body{
 .top-3{
   top: 0.75rem;
 }
+.right-4{
+  right: 1rem;
+}
+.right-5{
+  right: 1.25rem;
+}
 .z-0{
   z-index: 0;
 }
@@ -784,6 +790,9 @@ body{
 }
 .mt-8{
   margin-top: 2rem;
+}
+.mt-12{
+  margin-top: 3rem;
 }
 .line-clamp-1{
   overflow: hidden;
@@ -2454,6 +2463,11 @@ h3{
 
   .xs\:max-w-\[16\.375rem\]{
     max-width: 16.375rem;
+  }
+
+
+  .xs\:max-w-350{
+    max-width: 21.875rem;
   }
 
 
