--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1010,6 +1010,30 @@ body{
 .h-\[calc\(100vh-16rem\)\]{
   height: calc(100vh - 16rem);
 }
+.h-screen{
+  height: 100vh;
+}
+.h-\[calc\(100vh-6\.25rem\)\]{
+  height: calc(100vh - 6.25rem);
+}
+.h-\[calc\(100vh-7\.25rem\)\]{
+  height: calc(100vh - 7.25rem);
+}
+.h-\[calc\(100vh-8\.25rem\)\]{
+  height: calc(100vh - 8.25rem);
+}
+.h-\[calc\(100vh-10\.25rem\)\]{
+  height: calc(100vh - 10.25rem);
+}
+.h-\[calc\(100vh-10rem\)\]{
+  height: calc(100vh - 10rem);
+}
+.h-\[calc\(100vh-9rem\)\]{
+  height: calc(100vh - 9rem);
+}
+.h-\[calc\(100vh-9\.5rem\)\]{
+  height: calc(100vh - 9.5rem);
+}
 .max-h-\[32rem\]{
   max-height: 32rem;
 }
