--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -627,9 +627,6 @@ body{
   top: 0px;
   bottom: 0px;
 }
-.-top-12{
-  top: -3rem;
-}
 .-top-9{
   top: -2.25rem;
 }
@@ -644,9 +641,6 @@ body{
 }
 .left-4{
   left: 1rem;
-}
-.right-0{
-  right: 0px;
 }
 .right-2{
   right: 0.5rem;
@@ -663,14 +657,11 @@ body{
 .top-0{
   top: 0px;
 }
-.top-1{
-  top: 0.25rem;
+.top-1\.5{
+  top: 0.375rem;
 }
 .top-1\/2{
   top: 50%;
-}
-.top-1\.5{
-  top: 0.375rem;
 }
 .z-0{
   z-index: 0;
@@ -686,6 +677,9 @@ body{
 }
 .z-50{
   z-index: 50;
+}
+.z-\[20\]{
+  z-index: 20;
 }
 .order-last{
   order: 9999;
@@ -734,17 +728,11 @@ body{
 .ml-4{
   margin-left: 1rem;
 }
-.ml-9{
-  margin-left: 2.25rem;
-}
 .ml-auto{
   margin-left: auto;
 }
 .mr-4{
   margin-right: 1rem;
-}
-.mr-5{
-  margin-right: 1.25rem;
 }
 .mt-1{
   margin-top: 0.25rem;
@@ -885,10 +873,6 @@ body{
   width: 0.75rem;
   height: 0.75rem;
 }
-.size-30{
-  width: 1.875rem;
-  height: 1.875rem;
-}
 .size-32{
   width: 8rem;
   height: 8rem;
@@ -976,26 +960,20 @@ body{
 .h-\[1\.375rem\]{
   height: 1.375rem;
 }
-.h-\[25\.875rem\]{
-  height: 25.875rem;
-}
-.h-\[25rem\]{
-  height: 25rem;
-}
 .h-\[4\.75rem\]{
   height: 4.75rem;
 }
 .h-\[7\.5625rem\]{
   height: 7.5625rem;
 }
-.h-\[calc\(100vh-17rem\)\]{
-  height: calc(100vh - 17rem);
+.h-\[calc\(100vh-10rem\)\]{
+  height: calc(100vh - 10rem);
+}
+.h-\[calc\(100vh-17\.5rem\)\]{
+  height: calc(100vh - 17.5rem);
 }
 .h-\[calc\(100vh-200px\)\]{
   height: calc(100vh - 200px);
-}
-.h-\[calc\(100vh-9\.5rem\)\]{
-  height: calc(100vh - 9.5rem);
 }
 .h-full{
   height: 100%;
@@ -1003,36 +981,6 @@ body{
 .h-max{
   height: -moz-max-content;
   height: max-content;
-}
-.h-\[calc\(100vh-9\.3rem\)\]{
-  height: calc(100vh - 9.3rem);
-}
-.h-\[calc\(100vh-9\.8rem\)\]{
-  height: calc(100vh - 9.8rem);
-}
-.h-\[calc\(100vh-9\.rem\)\]{
-  height: calc(100vh - 9.rem);
-}
-.h-\[calc\(100vh-9\.9rem\)\]{
-  height: calc(100vh - 9.9rem);
-}
-.h-\[calc\(100vh-10rem\)\]{
-  height: calc(100vh - 10rem);
-}
-.h-\[calc\(100vh-18rem\)\]{
-  height: calc(100vh - 18rem);
-}
-.h-\[calc\(100vh-20rem\)\]{
-  height: calc(100vh - 20rem);
-}
-.h-\[calc\(100vh-16rem\)\]{
-  height: calc(100vh - 16rem);
-}
-.h-\[calc\(100vh-16\.5rem\)\]{
-  height: calc(100vh - 16.5rem);
-}
-.h-\[calc\(100vh-17\.5rem\)\]{
-  height: calc(100vh - 17.5rem);
 }
 .max-h-\[32rem\]{
   max-height: 32rem;
@@ -1100,12 +1048,6 @@ body{
 }
 .min-w-\[4\.875rem\]{
   min-width: 4.875rem;
-}
-.max-w-2xl{
-  max-width: 42rem;
-}
-.max-w-350{
-  max-width: 21.875rem;
 }
 .max-w-40{
   max-width: 10rem;
@@ -1373,9 +1315,6 @@ body{
 .overflow-y-auto{
   overflow-y: auto;
 }
-.overflow-y-scroll{
-  overflow-y: scroll;
-}
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -1508,10 +1447,6 @@ body{
 .bg-brand-red{
   --tw-bg-opacity: 1;
   background-color: rgb(235 87 87 / var(--tw-bg-opacity));
-}
-.bg-green-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -1662,9 +1597,6 @@ body{
 }
 .pt-5{
   padding-top: 1.25rem;
-}
-.pt-6{
-  padding-top: 1.5rem;
 }
 .text-left{
   text-align: left;
@@ -2456,23 +2388,8 @@ h3{
   }
 
 
-  .xs\:mt-40{
-    margin-top: 10rem;
-  }
-
-
   .xs\:flex{
     display: flex;
-  }
-
-
-  .xs\:grid{
-    display: grid;
-  }
-
-
-  .xs\:hidden{
-    display: none;
   }
 
 
@@ -2524,17 +2441,6 @@ h3{
 
   .xs\:border-r{
     border-right-width: 1px;
-  }
-
-
-  .xs\:p-3{
-    padding: 0.75rem;
-  }
-
-
-  .xs\:px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 
 
@@ -2666,16 +2572,6 @@ h3{
   }
 
 
-  .md\:-right-5{
-    right: -1.25rem;
-  }
-
-
-  .md\:-top-3{
-    top: -0.75rem;
-  }
-
-
   .md\:-mx-7{
     margin-left: -1.75rem;
     margin-right: -1.75rem;
@@ -2690,6 +2586,11 @@ h3{
 
   .md\:-mr-2{
     margin-right: -0.5rem;
+  }
+
+
+  .md\:mt-0{
+    margin-top: 0px;
   }
 
 
@@ -2720,11 +2621,6 @@ h3{
 
   .md\:mt-6{
     margin-top: 1.5rem;
-  }
-
-
-  .md\:mt-0{
-    margin-top: 0px;
   }
 
 
@@ -2777,6 +2673,11 @@ h3{
   }
 
 
+  .md\:h-12{
+    height: 3rem;
+  }
+
+
   .md\:h-6{
     height: 1.5rem;
   }
@@ -2784,41 +2685,6 @@ h3{
 
   .md\:h-7{
     height: 1.75rem;
-  }
-
-
-  .md\:h-\[31\.5625rem\]{
-    height: 31.5625rem;
-  }
-
-
-  .md\:h-full{
-    height: 100%;
-  }
-
-
-  .md\:h-12{
-    height: 3rem;
-  }
-
-
-  .md\:h-\[calc\(100vh-19rem\)\]{
-    height: calc(100vh - 19rem);
-  }
-
-
-  .md\:h-\[calc\(100vh-20rem\)\]{
-    height: calc(100vh - 20rem);
-  }
-
-
-  .md\:h-\[calc\(100vh-25rem\)\]{
-    height: calc(100vh - 25rem);
-  }
-
-
-  .md\:h-\[calc\(100vh-16rem\)\]{
-    height: calc(100vh - 16rem);
   }
 
 
@@ -3028,12 +2894,6 @@ h3{
   }
 
 
-  .md\:py-4{
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-
   .md\:py-6{
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
@@ -3132,11 +2992,6 @@ h3{
   }
 
 
-  .lg\:-right-8{
-    right: -2rem;
-  }
-
-
   .lg\:order-none{
     order: 0;
   }
@@ -3145,11 +3000,6 @@ h3{
   .lg\:mx-0{
     margin-left: 0px;
     margin-right: 0px;
-  }
-
-
-  .lg\:\!mt-20{
-    margin-top: 5rem !important;
   }
 
 
@@ -3269,11 +3119,6 @@ h3{
   }
 
 
-  .lg\:h-12{
-    height: 3rem;
-  }
-
-
   .lg\:h-14{
     height: 3.5rem;
   }
@@ -3299,6 +3144,11 @@ h3{
   }
 
 
+  .lg\:h-\[calc\(100vh-10\.5rem\)\]{
+    height: calc(100vh - 10.5rem);
+  }
+
+
   .lg\:h-\[calc\(100vh-450px\)\]{
     height: calc(100vh - 450px);
   }
@@ -3310,40 +3160,9 @@ h3{
   }
 
 
-  .lg\:h-\[calc\(100vh-9\.5rem\)\]{
-    height: calc(100vh - 9.5rem);
-  }
-
-
-  .lg\:h-\[calc\(100vh-8rem\)\]{
-    height: calc(100vh - 8rem);
-  }
-
-
-  .lg\:h-\[calc\(100vh-10rem\)\]{
-    height: calc(100vh - 10rem);
-  }
-
-
-  .lg\:h-\[calc\(100vh-11rem\)\]{
-    height: calc(100vh - 11rem);
-  }
-
-
-  .lg\:h-\[calc\(100vh-10\.5rem\)\]{
-    height: calc(100vh - 10.5rem);
-  }
-
-
   .lg\:min-h-max{
     min-height: -moz-max-content;
     min-height: max-content;
-  }
-
-
-  .lg\:min-h-min{
-    min-height: -moz-min-content;
-    min-height: min-content;
   }
 
 
@@ -3394,11 +3213,6 @@ h3{
 
   .lg\:max-w-\[26\.875rem\]{
     max-width: 26.875rem;
-  }
-
-
-  .lg\:max-w-\[35\.25rem\]{
-    max-width: 35.25rem;
   }
 
 
@@ -3502,11 +3316,6 @@ h3{
 
   .lg\:gap-y-6{
     row-gap: 1.5rem;
-  }
-
-
-  .lg\:gap-y-8{
-    row-gap: 2rem;
   }
 
 
@@ -3719,12 +3528,6 @@ h3{
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-
-  .lg\:text-4xl\/6{
-    font-size: 2.25rem;
-    line-height: 1.5rem;
   }
 
 
