--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -985,6 +985,9 @@ body{
 .max-h-\[32rem\]{
   max-height: 32rem;
 }
+.max-h-\[31\.25rem\]{
+  max-height: 31.25rem;
+}
 .min-h-full{
   min-height: 100%;
 }
@@ -2693,6 +2696,26 @@ h3{
   }
 
 
+  .md\:max-h-\[31\.25rem\]{
+    max-height: 31.25rem;
+  }
+
+
+  .md\:max-h-\[28\.125rem\]{
+    max-height: 28.125rem;
+  }
+
+
+  .md\:max-h-\[26\.125rem\]{
+    max-height: 26.125rem;
+  }
+
+
+  .md\:max-h-\[25rem\]{
+    max-height: 25rem;
+  }
+
+
   .md\:w-1\/2{
     width: 50%;
   }
@@ -3157,6 +3180,16 @@ h3{
   .lg\:h-max{
     height: -moz-max-content;
     height: max-content;
+  }
+
+
+  .lg\:h-\[31\.25rem\]{
+    height: 31.25rem;
+  }
+
+
+  .lg\:max-h-\[31\.25rem\]{
+    max-height: 31.25rem;
   }
 
 
