--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1190,6 +1190,9 @@ body{
 .items-center{
   align-items: center;
 }
+.items-baseline{
+  align-items: baseline;
+}
 .justify-center{
   justify-content: center;
 }
